--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "test",
-    "short_name": "test",
+    "name": "vibestar",
+    "short_name": "vibestar",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "Vibestar App",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
